# VegaFEM

./: CMakeLists.txt  INSTALL.txt  LICENSE.txt  README  buildModelReduction  vega.sln
libraries/elasticForceModel/: CMakeLists.txt  StVKForceModel.cpp  StVKForceModel.h  clothBWForceModel.cpp  clothBWForceModel.h  corotationalLinearFEMForceModel.cpp  corotationalLinearFEMForceModel.h  isotropicHyperelasticFEMForceModel.cpp  isotropicHyperelasticFEMForceModel.h  linearFEMForceModel.cpp  linearFEMForceModel.h  massSpringSystemForceModel.cpp  massSpringSystemForceModel.h
libraries/integratorSparse/: CMakeLists.txt  centralDifferencesSparse.cpp  centralDifferencesSparse.h  eulerSparse.cpp  eulerSparse.h  implicitBackwardEulerSparse.cpp  implicitBackwardEulerSparse.h  implicitNewmarkSparse.cpp  implicitNewmarkSparse.h  integratorBaseSparse.cpp  integratorBaseSparse.h  integratorSparse.vcxproj  integratorSparse.vcxproj.filters
libraries/isotropicHyperelasticFEM/: CMakeLists.txt  Makefile  MooneyRivlinIsotropicMaterial.cpp  MooneyRivlinIsotropicMaterial.h  StVKIsotropicMaterial.cpp  StVKIsotropicMaterial.h  homogeneousMooneyRivlinIsotropicMaterial.cpp  homogeneousMooneyRivlinIsotropicMaterial.h  homogeneousNeoHookeanIsotropicMaterial.cpp  homogeneousNeoHookeanIsotropicMaterial.h  homogeneousStVKIsotropicMaterial.cpp  homogeneousStVKIsotropicMaterial.h  invertibleElements.vcxproj  invertibleElements.vcxproj.filters  isotropicHyperelasticFEM.cpp  isotropicHyperelasticFEM.h  isotropicHyperelasticFEMMT.cpp  isotropicHyperelasticFEMMT.h  isotropicMaterial.cpp  isotropicMaterial.h  isotropicMaterialWithCompressionResistance.cpp  isotropicMaterialWithCompressionResistance.h  neoHookeanIsotropicMaterial.cpp  neoHookeanIsotropicMaterial.h
libraries/massSpringSystem/: CMakeLists.txt  Makefile  massSpringSystem.cpp  massSpringSystem.h  massSpringSystem.vcxproj  massSpringSystem.vcxproj.filters  massSpringSystemFromCubicMesh.cpp  massSpringSystemFromCubicMesh.h  massSpringSystemFromCubicMeshConfigFile.cpp  massSpringSystemFromCubicMeshConfigFile.h  massSpringSystemFromObjMesh.cpp  massSpringSystemFromObjMesh.h  massSpringSystemFromObjMeshConfigFile.cpp  massSpringSystemFromObjMeshConfigFile.h  massSpringSystemFromTetMesh.cpp  massSpringSystemFromTetMesh.h  massSpringSystemFromTetMeshConfigFile.cpp  massSpringSystemFromTetMeshConfigFile.h  massSpringSystemMT.cpp  massSpringSystemMT.h  renderSprings.cpp  renderSprings.h
libraries/objMesh/: CMakeLists.txt  Makefile  boundingBox.cpp  boundingBox.h  objMesh-disjointSet.cpp  objMesh-disjointSet.h  objMesh.cpp  objMesh.h  objMeshBinaryLoader.cpp  objMeshBinaryLoader.h  objMeshClose.cpp  objMeshClose.h  objMeshEncode.cpp  objMeshEncode.h  objMeshOctree.cpp  objMeshOctree.h  objMeshOffsetVoxels.cpp  objMeshOffsetVoxels.h  objMeshOrientable.cpp  objMeshOrientable.h  objMeshRender.cpp  objMeshRender.h  octree.cpp  octree.h  simpleSphere.cpp  simpleSphere.h  triangle-closestPoint.cpp  triangle.cpp  triangle.h  tribox3.cpp  tribox3.h
libraries/objMeshGPUDeformer/: CMakeLists.txt  Makefile  coarseToFine-shaders.cpp  glh_extensions.h  objMeshGPUDeformer.cpp  objMeshGPUDeformer.h  objMeshGPUDeformer.vcxproj  objMeshGPUDeformer.vcxproj.filters  objMeshGPUDeformer_coarseToFine.cpp  objMeshGPUDeformer_coarseToFine.h  objMeshGPUDeformer_coarseToFine_fbo.cpp  objMeshGPUDeformer_coarseToFine_fbo.h  objMeshGPUDeformer_uUq.cpp  objMeshGPUDeformer_uUq.h  objMeshGPUDeformer_uUq_fbo.cpp  objMeshGPUDeformer_uUq_fbo.h  objMeshGPUDeformer_uUq_pbuffer.cpp  objMeshGPUDeformer_uUq_pbuffer.h  objMeshGPUDeformer_uUq_setLighting.cpp  objMeshGPUDeformer_uUq_setLighting.h  uUq-shaders.cpp  vbo.cpp  vbo.h
libraries/reducedElasticForceModel/: CMakeLists.txt  Makefile  reducedElasticForceModel.vcxproj  reducedElasticForceModel.vcxproj.filters  reducedLinearForceModel.cpp  reducedLinearForceModel.h  reducedLinearStVKForceModel.cpp  reducedLinearStVKForceModel.h  reducedMassSpringSystemForceModel.cpp  reducedMassSpringSystemForceModel.h  reducedMassSpringSystemForceModelWithHessian.cpp  reducedMassSpringSystemForceModelWithHessian.h  reducedSpringForceModel.cpp  reducedSpringForceModel.h  reducedStVKForceModel.cpp  reducedStVKForceModel.h  reducedStVKForceModelWithHessian.cpp  reducedStVKForceModelWithHessian.h  reducedSubspaceStVKForceModel.cpp  reducedSubspaceStVKForceModel.h
libraries/sceneObject/: CMakeLists.txt  Makefile  sceneObject.cpp  sceneObject.h  sceneObject.vcxproj  sceneObject.vcxproj.filters  sceneObject6DOF.cpp  sceneObject6DOF.h  sceneObjectDeformable.cpp  sceneObjectDeformable.h  sceneObjectDeformable6DOF.cpp  sceneObjectDeformable6DOF.h  sceneObjectDeformableGPU.cpp  sceneObjectDeformableGPU.h  sceneObjectDeformableGPU6DOF.cpp  sceneObjectDeformableGPU6DOF.h  sceneObjectWithRestPosition.cpp  sceneObjectWithRestPosition.h
libraries/sceneObjectReduced/: CMakeLists.txt  sceneObjectReduced.cpp  sceneObjectReduced.h  sceneObjectReduced6DOF.cpp  sceneObjectReduced6DOF.h  sceneObjectReducedCPU.cpp  sceneObjectReducedCPU.h  sceneObjectReducedCPU6DOF.cpp  sceneObjectReducedCPU6DOF.h  sceneObjectReducedGPU.cpp  sceneObjectReducedGPU.h  sceneObjectReducedGPU6DOF.cpp  sceneObjectReducedGPU6DOF.h
libraries/stvk/: CMakeLists.txt  StVKCubeABCD.cpp  StVKCubeABCD.h  StVKElementABCD.cpp  StVKElementABCD.h  StVKElementABCDLoader.cpp  StVKElementABCDLoader.h  StVKHessianTensor.cpp  StVKHessianTensor.h  StVKInternalForces.cpp  StVKInternalForces.h  StVKInternalForcesMT.cpp  StVKInternalForcesMT.h  StVKStiffnessMatrix.cpp  StVKStiffnessMatrix.h  StVKStiffnessMatrixMT.cpp  StVKStiffnessMatrixMT.h  StVKTetABCD.cpp  StVKTetABCD.h  StVKTetHighMemoryABCD.cpp  StVKTetHighMemoryABCD.h  cubicMeshIntegrals.cpp
libraries/volumetricMesh/: CMakeLists.txt  Makefile  computeStiffnessMatrixNullspace.cpp  computeStiffnessMatrixNullspace.h  cubicMesh.cpp  cubicMesh.h  generateGradientMatrix.cpp  generateGradientMatrix.h  generateInterpolationMatrix.cpp  generateInterpolationMatrix.h  generateMassMatrix.cpp  generateMassMatrix.h  generateMeshGraph.cpp  generateMeshGraph.h  generateSurfaceMesh.cpp  (+22 more)
(+395 files in other folders)
